left align footer on mobile (fixes #2)

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -156,6 +156,11 @@
         width: -webkit-calc(100% - (#{$spacing-unit} / 2));
         width:         calc(100% - (#{$spacing-unit} / 2));
     }
+
+    .contact-list, 
+    .social-media-list {
+        text-align: left;
+    }
 }
 
 
